--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  width: 100%;
+  height: 100%;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(34 197 94);
+  font-size: 50px;
+  font-weight: 600;
+  transform: translate3d(0, 0, 0);
+  animation: text-animation 0.5s;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(.5, 0.05, 1, .5);
+  animation-iteration-count: infinite;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
+@keyframes text-animation {
   from {
-    transform: rotate(0deg);
+    transform: translate3d(0, 0, 0);
   }
+
   to {
-    transform: rotate(360deg);
+    transform: translate3d(0, 20px, 0);
   }
 }
